infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: comment-depl
spec:
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
        - name: comment
          image: anuj2110/comments

---
apiVersion: v1
kind: Service 
metadata:
  name:  comment-service
spec:
  selector:
    app: comment
  ports:
  - name: comment
    port:  4001
    protocol: TCP
    targetPort: 4001
