infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus-depl
  template:
    metadata:
      labels:
        app: event-bus-depl
    
    spec:
      containers:
        - name: event-bus
          image: anuj2110/event-bus

---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  selector:
    app: event-bus-depl
  ports:
  - name:  event-bus
    port:  4005
    protocol: TCP
    targetPort: 4005
