infra/k8s/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: frontend-depl
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: anuj2110/frontend

---
apiVersion: v1
kind: Service 
metadata:
  name:  frontend-service
spec:
  selector:
    app: frontend
  ports:
  - name: frontend
    port:  3000
    protocol: TCP
    targetPort: 3000
