infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    name: appPost # same key-value pair as the one mentioned in the templates of the pods inside deployments
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
