infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: query-depl
spec:
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: anuj2110/query

---
apiVersion: v1
kind: Service 
metadata:
  name:  query-service
spec:
  selector:
    app: query
  ports:
  - name: query
    port:  4002
    protocol: TCP
    targetPort: 4002
